	 openiblnd - IbGold 1.8.2,
	 o2iblnd   - OFED 1.1, 1.2.0, 1.2.5, and 1.3
	 viblnd    - Voltaire ibhost 3.4.5 and later,
	 ciblnd    - Topspin 3.2.0,
	 iiblnd    - Infiniserv 3.3 + PathBits patch,
	 gmlnd     - GM 2.1.22 and later,
	 mxlnd     - MX 1.2.1 or later,
	 ptllnd    - Portals 3.3 / UNICOS/lc 1.5.x, 2.0.x

Severity   : 
Bugzilla   : 
Description: 
Details    : 

Severity   : major
Bugzilla   : 15093
Description: Support Zerocopy receive of Chelsio device
Details    : Chelsio driver can support zerocopy for iov[1] if it's
             contiguous and large enough.

Severity   : normal
Bugzilla   : 13490
Description: fix credit flow deadlock in uptllnd

Severity   : normal
Bugzilla   : 16308
Description: finalize network operation in reasonable time
Details    : conf-sanity test_32a couldn't stop ost and mds because it
             tried to access non-existent peer and tcp connect took
             quite long before timing out.

Severity   : normal
Bugzilla   : 13139
Description: Remove portals compatibility
Details    : Remove portals compatibility, not interoperable with releases
             before 1.4.6

Severity   : major
Bugzilla   : 16338
Description: Continuous recovery on 33 of 413 nodes after lustre oss failure
Details    : Lost reference on conn prevents peer from being destroyed, which
             could prevent new peer creation if peer count has reached upper
	     limit.

Severity   : normal
Bugzilla   : 16102
Description: LNET Selftest results in Soft lockup on OSS CPU
Details    : only hits when 8 or more o2ib clients involved and a session is
             torn down with 'lst end_session' without preceeding 'lst stop'.

Severity   : minor
Bugzilla   : 16321
Description: concurrent_sends in IB LNDs should not be changeable at run time
Details    : concurrent_sends in IB LNDs should not be changeable at run time

Severity   : normal
Bugzilla   : 15272
Description: ptl_send_rpc hits LASSERT when ptl_send_buf fails